--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -17,7 +17,7 @@
                     <tr>
                         <th style="width: 50px;">ID</th>
                         <th>Name</th>
-                        <th style="width: 100px;">Test 1</th>
+                        <th style="width: 100px;">Phone</th>
                         <th style="width: 20px;"></th>
                     </tr>
                     </thead>
@@ -70,21 +70,21 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="test1" class="col-sm-2 control-label">Test 1</label>
+            <label for="test1" class="col-sm-2 control-label">Phone</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="test1" placeholder="Test Data 1">
+                <input type="text" class="form-control" id="test1" placeholder="Phone">
             </div>
         </div>
         <div class="form-group">
-            <label for="test2" class="col-sm-2 control-label">Test 2</label>
+            <label for="test2" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="test2" placeholder="Test Data 2">
+                <input type="text" class="form-control" id="test2" placeholder="Email">
             </div>
         </div>
         <div class="form-group">
-            <label for="test3" class="col-sm-2 control-label">Test 3</label>
+            <label for="test3" class="col-sm-2 control-label">Address</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="test3" placeholder="Test Data 3">
+                <input type="text" class="form-control" id="test3" placeholder="Address">
             </div>
         </div>
     </form>
