This is demo video...

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -14,6 +14,9 @@
                 <li class="mnu" has-permission="user">
                     <a href="#/patients">Patients</a>                        
                 </li>
+                <li class="mnu" has-permission="user">
+                    <a href="#/users">Users</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/login"><i class="fa fa-sign-in"></i> Log in</a></li>
