--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -87,6 +87,12 @@
                 <input type="text" class="form-control" id="test3" placeholder="Address">
             </div>
         </div>
+        <div class="form-group">
+            <label for="test3" class="col-sm-2 control-label">Web</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="test4" placeholder="Web">
+            </div>
+        </div>
     </form>
     <!-- HTML Form for adding new patient details -->
     <form class="form-horizontal form-add-details" role="form" style="display: none">
