--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -12,10 +12,10 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="mnu" has-permission="user">
-                    <a href="#/patients">Patients</a>                        
+                    <a href="#/patients">Patients</a>
                 </li>
                 <li class="mnu" has-permission="user">
-                    <a href="#/users">Users</a>
+                    <a href="#/clinicalcontent">Clinical Content</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
