--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -15,18 +15,18 @@
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
                     <tr>
-                        <th style="width: 50px;">ID</th>
                         <th>Name</th>
-                        <th style="width: 100px;">Phone</th>
+                        <th style="width: 80px;">Sex</th>
+                        <th style="width: 60px;">Age</th>
                         <th style="width: 20px;"></th>
                     </tr>
                     </thead>
                     <tbody>
                         <tr style="cursor: pointer" ng-repeat="patient in patients track by $id($index)" ng-click="showDetails(patient._id, patient.name)">
-                            <td>{{ patient.no }}</td>
                             <td>{{ patient.name }}</td>
-                            <td>{{ patient.test1 }}</td>
-                            <td><i class="fa fa-pencil-square-o" ng-click="editPatient(patient._id); $event.stopPropagation();"></i></td>
+                            <td>{{ patient.sex }}</td>
+                            <td>{{ patient.age }}</td>
+                            <td><i class="fa fa-pencil-square-o" ng-click="editPatient(patient); $event.stopPropagation();"></i></td>
                         </tr>
                     </tbody>
                 </table>
@@ -61,6 +61,65 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="patientModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">{{ patientModalTitle }}</h4>
+              </div>
+              <div class="modal-body">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="identifier" class="col-sm-3 control-label" required>Patient Identifier</label>
+                        <div class="col-sm-9">
+                            <input ng-model="patientModal.identifier" type="text" class="form-control" id="identifier" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="name" class="col-sm-3 control-label" required>Patient Name</label>
+                        <div class="col-sm-9">
+                            <input ng-model="patientModal.name" type="text" class="form-control" id="name" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="dob" class="col-sm-3 control-label" required>DOB</label>
+                        <div class="col-sm-9">
+                            <input ng-model="patientModal.dob" type="text" class="form-control" id="dob" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="sex" class="col-sm-3 control-label" required>Sex</label>
+                        <div class="col-sm-9">
+                            <select class="form-control" ng-model="patientModal.sex" id="sex">
+                              <option>Female</option>
+                              <option>Male</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="author" class="col-sm-3 control-label" required>Author</label>
+                        <div class="col-sm-9">
+                            <input ng-model="patientModal.author" type="text" class="form-control" id="author" required>
+                        </div>
+                    </div>
+
+
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary">Save</button>
+              </div>
+            </div>
+        </div>
+    </div>
+
     <!-- HTML Form for adding new patient -->
     <form class="form-horizontal form-add-patient" role="form" style="display: none">
         <div class="form-group">
@@ -99,7 +158,7 @@
         <div class="form-group">
             <label for="name" class="col-sm-2 control-label" required>Details</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="tokenfield" />                               
+                <input type="text" class="form-control" id="tokenfield" />
             </div>
         </div>
     </form>
