--- a/public/partials/clinicalContent.html
+++ b/public/partials/clinicalContent.html
@@ -1,1 +1,46 @@
-ClinicalContent...
+<section>
+    <div class="row">
+        <div class="col-sm-12 col-md-12">
+            <blockquote>
+                <p>Clinical Content</p>
+            </blockquote>
+            <div>
+                <input ng-model="detailFilter" type="text" class="form-control" placeholder="filter tags" style="margin-bottom: 5px">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th style="width: 300px;">Tags Name</th>
+                            <th>Content</th>
+                            <th style="width: 20px;"></th>
+                            <th style="width: 20px;"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="content in contents">
+                        <td>
+                            <pre class="pre">{{ content.tags }}</pre>
+                        </td>
+                        <td>
+                            <pre class="pre">{{ content.content }}</pre>
+                        </td>
+                        <td><i class="fa fa-pencil-square-o" ng-click="editDetails(detail._id)"></i></td>
+                        <td><i class="fa fa-times" ng-click="deleteDetails(detail._id)"></i></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <button type="button" class="btn btn-primary pull-right" ng-click="addContent()">Add New Content</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- HTML Form for adding new patient details -->
+    <form class="form-horizontal form-add-content" role="form" style="display: none">
+        <div class="form-group">
+            <label for="name" class="col-sm-2 control-label" required>Details</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="tokenfield" />
+            </div>
+        </div>
+    </form>
+
+</section>
