--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -42,7 +42,7 @@
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
                         <tr>
-                            <th style="width: 50px;">ID</th>
+                            <th style="width: 50px;">Episode</th>
                             <th>Data</th>
                             <th style="width: 20px;"></th>
                             <th style="width: 20px;"></th>
@@ -50,11 +50,13 @@
                     </thead>
                     <tbody>
                     <tr ng-repeat="detail in details">
-                            <td>{{ detail.no }}</td>
-                            <td>{{ detail.details.join(', ') }}</td>
-                            <td><i class="fa fa-pencil-square-o" ng-click="editDetails(detail._id)"></i></td>
-                            <td><i class="fa fa-times" ng-click="deleteDetails(detail._id)"></i></td>
-                        </tr>
+                        <td>{{ detail.no }}</td>
+                        <td>
+                            <div ng-repeat="item in detail.details  track by $index">{{ item }}<br></div>
+                        </td>
+                        <td><i class="fa fa-pencil-square-o" ng-click="editDetails(detail._id)"></i></td>
+                        <td><i class="fa fa-times" ng-click="deleteDetails(detail._id)"></i></td>
+                    </tr>
                     </tbody>
                 </table>
                 <button type="button" class="btn btn-primary pull-right" ng-click="addDetails()">Add Patient Data</button>
