--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -18,7 +18,7 @@
                     <a href="#/clinicalcontent">Clinical Content</a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" ng-hide="true">
                 <li><a href="#/login"><i class="fa fa-sign-in"></i> Log in</a></li>
             </ul>
         </div>
