--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -5,6 +5,7 @@
                 <p>Male/Female Patients</p>
             </blockquote>
             <div id="chartContainer" style="height: 200px"></div>
+            <button type="button" class="btn btn-primary pull-right" ng-click="addPatient()">Add Patient</button>
         </div>
         <div class="col-sm-7 col-md-4">
             <blockquote>
@@ -17,20 +18,19 @@
                     <tr>
                         <th>Name</th>
                         <th style="width: 80px;">Sex</th>
-                        <th style="width: 60px;">Age</th>
+                        <th style="width: 60px;">DOB</th>
                         <th style="width: 20px;"></th>
                     </tr>
                     </thead>
                     <tbody>
-                        <tr style="cursor: pointer" ng-repeat="patient in patients track by $id($index)" ng-click="showDetails(patient._id, patient.name)">
+                        <tr style="cursor: pointer" ng-repeat="patient in patients track by $id($index)" ng-click="showDetails(patient)">
                             <td>{{ patient.name }}</td>
                             <td>{{ patient.sex }}</td>
-                            <td>{{ patient.age }}</td>
+                            <td>{{ patient.dob }}</td>
                             <td><i class="fa fa-pencil-square-o" ng-click="editPatient(patient); $event.stopPropagation();"></i></td>
                         </tr>
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-primary pull-right" ng-click="addPatient()">Add Patient</button>
             </div>
         </div>
         <div class="col-sm-12 col-md-5">
@@ -49,7 +49,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="detail in details">
+                    <tr ng-repeat="detail in selectedPatient.details">
                         <td>{{ detail.no }}</td>
                         <td>
                             <span ng-repeat="item in detail.details track by $index">{{ item }}<br></span>
@@ -100,8 +100,8 @@
                             <label for="sex" class="col-sm-3 control-label" required>Sex</label>
                             <div class="col-sm-9">
                                 <select class="form-control" ng-model="patientModal.sex" id="sex">
-                                    <option>Female</option>
-                                    <option>Male</option>
+                                    <option value="female">Female</option>
+                                    <option value="male">Male</option>
                                 </select>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" ng-click="saveContent(current)" >Save changes</button>
+                    <button type="button" class="btn btn-primary" ng-click="savePatient(patientModal)" >Save changes</button>
                 </div>
             </div>
         </div>
@@ -149,6 +149,18 @@
                             <label class="col-sm-2 control-label" required>Clinical Node</label>
                             <div class="col-sm-10">
                                 <textarea class="form-control" rows="6" ng-model="contentLines"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="name" class="col-sm-2 control-label">Author</label>
+                            <div class="col-sm-4">
+                                <input type="text" class="form-control" ng-model="detailsModal.author"  />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="name" class="col-sm-2 control-label">Date</label>
+                            <div class="col-sm-4">
+                                <input type="text" class="form-control" ng-model="detailsModal.date"  />
                             </div>
                         </div>
                     </form>
