--- a/public/partials/clinicalContent.html
+++ b/public/partials/clinicalContent.html
@@ -42,24 +42,24 @@
                 </div>
                 <div class="modal-body">
                     <!-- HTML Form for adding new patient details -->
-                    <form class="form-horizontal" role="form">
-                        <div class="form-group">
-                            <label for="tags" class="col-sm-2 control-label" required>Tag Name</label>
+                    <form class="form-horizontal" role="form" name="detailForm">
+                        <div class="form-group" ng-class="{ 'has-error': detailForm.tag.$invalid && detailForm.tag.$dirty }">
+                            <label for="tag" class="col-sm-2 control-label" required>Tag Name</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="tags" ng-model="current.tag" />
+                                <input type="text" class="form-control" id="tag" name="tag" ng-model="current.tag" required />
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" ng-class="{ 'has-error': detailForm.content.$invalid && detailForm.content.$dirty }">
                             <label for="content" class="col-sm-2 control-label" required>Contents</label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" rows="4" id="content" ng-model="contentLines"></textarea>
+                                <textarea class="form-control" rows="4" id="content" name="content" ng-model="contentLines" required></textarea>
                             </div>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" ng-click="saveContent(current)" >Save changes</button>
+                    <button type="button" class="btn btn-primary" ng-click="saveContent(current)" ng-disabled="detailForm.$invalid">Save changes</button>
                 </div>
             </div>
         </div>
