--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -5,14 +5,12 @@
                 <p>Male/Female Patients</p>
             </blockquote>
             <div id="chartContainer" style="height: 200px"></div>
-            <br>
-            <button type="button" class="btn btn-default btn-block" ng-click="addPatient()">Add New Patient</button>
         </div>
         <div class="col-sm-7 col-md-4">
             <blockquote>
                 <p>Patients<b>{{ chosenGender ? ': ' + chosenGender : '' }}</b></p>
             </blockquote>
-            <div ng-show="chosenGender">
+            <div >
                 <input ng-model="patientFilter" type="text" class="form-control" placeholder="filter" style="margin-bottom: 5px">
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
@@ -20,6 +18,7 @@
                         <th>Name</th>
                         <th style="width: 80px;">Sex</th>
                         <th style="width: 100px;">DOB</th>
+                        <th style="width: 20px;"></th>
                         <th style="width: 20px;"></th>
                     </tr>
                     </thead>
@@ -29,9 +28,12 @@
                             <td>{{ patient.sex }}</td>
                             <td>{{ patient.dob }}</td>
                             <td><i class="fa fa-pencil-square-o" ng-click="editPatient(patient); $event.stopPropagation();"></i></td>
+                            <td><i class="fa fa-times" ng-click="deletePatient(patient); $event.stopPropagation();"></i></td>
                         </tr>
                     </tbody>
                 </table>
+                <br>
+                <button type="button" class="btn btn-info btn-block" ng-click="addPatient()">Add New Patient</button>
             </div>
         </div>
         <div class="col-sm-12 col-md-5">
@@ -93,7 +95,7 @@
                         <div class="form-group" ng-class="{ 'has-error': patientForm.dob.$invalid && patientForm.dob.$dirty }">
                             <label for="dob" class="col-sm-3 control-label" required>DOB</label>
                             <div class="col-sm-9">
-                                <input ng-model="patientModal.dob" type="text" class="form-control" id="dob" name="dob" required>
+                                <input ng-model="patientModal.dob" type="text" class="form-control patient-datepicker" id="dob" name="dob" required>
                             </div>
                         </div>
 
@@ -143,7 +145,7 @@
                         <div class="form-group">
                             <label for="name" class="col-sm-2 control-label">Add Notes</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control typeahead"  />
+                                <input type="text" class="form-control typeahead add-notes"  />
                             </div>
                         </div>
                         <div class="form-group"  ng-class="{ 'has-error': detailForm.lines.$invalid && detailForm.lines.$dirty }">
@@ -152,18 +154,26 @@
                                 <textarea class="form-control" rows="6" ng-model="contentLines" name="lines" required></textarea>
                             </div>
                         </div>
-                        <div class="form-group" ng-class="{ 'has-error': detailForm.address.$invalid && detailForm.address.$dirty }">
-                            <label for="name" class="col-sm-2 control-label">Author</label>
-                            <div class="col-sm-4">
-                                <input type="text" class="form-control" ng-model="detailsModal.author" name="address" required/>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="form-group" ng-class="{ 'has-error': detailForm.address.$invalid && detailForm.address.$dirty }">
+                                    <label for="name" class="col-sm-4 control-label">Author</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control" ng-model="detailsModal.author" name="address" required/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group" ng-class="{ 'has-error': detailForm.date.$invalid && detailForm.date.$dirty }">
+                                    <label for="name" class="col-sm-4 control-label">Date</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control detail-datepicker" ng-model="detailsModal.date" id="date" name="date" required />
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="form-group" ng-class="{ 'has-error': detailForm.date.$invalid && detailForm.date.$dirty }">
-                            <label for="name" class="col-sm-2 control-label">Date</label>
-                            <div class="col-sm-4">
-                                <input type="text" class="form-control" ng-model="detailsModal.date" id="date" name="date" required />
-                            </div>
-                        </div>
+
+
                     </form>
                 </div>
                 <div class="modal-footer">
