--- a/public/partials/clinicalContent.html
+++ b/public/partials/clinicalContent.html
@@ -5,6 +5,7 @@
                 <p>Clinical Content</p>
             </blockquote>
             <div>
+                <input ng-model="contentFilter" type="text" class="form-control" placeholder="filter" style="margin-bottom: 5px">
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
                         <tr>
@@ -15,7 +16,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="content in contents">
+                    <tr ng-repeat="content in contents | filter : contentFilter">
                         <td>
                             <pre class="pre">{{ content.tag }}</pre>
                         </td>
