--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -136,10 +136,22 @@
                 <div class="modal-body">
                     <!-- HTML Form for adding new patient details -->
                     <form class="form-horizontal" role="form" name="detailForm">
-                        <div class="form-group" ng-class="{ 'has-error': detailForm.no.$invalid && detailForm.no.$dirty }">
-                            <label for="name" class="col-sm-2 control-label">Episode</label>
-                            <div class="col-sm-4">
-                                <input type="text" class="form-control" ng-model="detailsModal.no" name="no" required />
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="form-group" ng-class="{ 'has-error': detailForm.no.$invalid && detailForm.no.$dirty }">
+                                    <label for="name" class="col-sm-4 control-label">Episode</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control" ng-model="detailsModal.no" name="no" required />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="name" class="col-sm-4 control-label">Tag(s)</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control tags" ng-model="detailsModal.tags" name="tags" />
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -172,8 +184,6 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </form>
                 </div>
                 <div class="modal-footer">
