--- a/public/partials/clinicalContent.html
+++ b/public/partials/clinicalContent.html
@@ -57,7 +57,7 @@
                         <div class="form-group" ng-class="{ 'has-error': detailForm.tags.$invalid && detailForm.tags.$dirty }">
                             <label for="tags" class="col-sm-2 control-label" required>Tags</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="tags" name="tags" ng-model="tagLines" required />
+                                <input type="text" class="form-control" id="tags" name="tags" ng-model="tagLines" />
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': detailForm.content.$invalid && detailForm.content.$dirty }">
