--- a/public/partials/patients.html
+++ b/public/partials/patients.html
@@ -32,9 +32,9 @@
         <div class="col-sm-7 col-md-4">
             <blockquote>
                 <p>
-                    Patients
+                    Patients:
                     <b>
-                    {{ chosenGender ? ': ' + chosenGender : '' }}
+                    {{ chosenGender ? chosenGender : '' }}
                     {{ queryLabel ? (chosenGender ? ' + ' : '') + queryLabel : ''}}
                     {{ age ? (chosenGender || queryLabel ? ' + ' : '') + 'Age ' + age.label : '' }}
                     </b></p>
@@ -92,6 +92,8 @@
                     </tbody>
                 </table>
                 <button type="button" class="btn btn-primary pull-right" ng-click="addDetails()">Add Patient Data</button>
+                <button type="button" class="btn btn-primary pull-right" ng-click="addDetailsTemplate()" style="margin-right: 10px;">Add Data by Template</button>
+
             </div>
         </div>
     </div>
@@ -214,6 +216,69 @@
                             </div>
                         </div>
                     </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" ng-click="saveDetails(detailsModal)" ng-disabled="detailForm.$invalid">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Details -->
+    <div class="modal fade" id="form-add-details-template" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title">{{ detailsModalTitle }}</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-8">
+                            <form class="form-horizontal" role="form" name="detailForm">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group" ng-class="{ 'has-error': detailForm.no.$invalid && detailForm.no.$dirty }">
+                                            <label for="name" class="col-sm-4 control-label">Episode</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" class="form-control" ng-model="detailsModal.no" name="no" required />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+
+                                    </div>
+                                </div>
+                                <div class="form-group"  ng-class="{ 'has-error': detailForm.lines.$invalid && detailForm.lines.$dirty }">
+                                    <label class="col-sm-2 control-label" required>Clinical Node</label>
+                                    <div class="col-sm-10">
+                                        <textarea class="form-control" rows="10" ng-model="contentLines" name="lines" required></textarea>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group" ng-class="{ 'has-error': detailForm.address.$invalid && detailForm.address.$dirty }">
+                                            <label for="name" class="col-sm-4 control-label">Author</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" class="form-control" ng-model="detailsModal.author" name="address" required/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group" ng-class="{ 'has-error': detailForm.date.$invalid && detailForm.date.$dirty }">
+                                            <label for="name" class="col-sm-4 control-label">Date</label>
+                                            <div class="col-sm-8">
+                                                <input type="text" class="form-control detail-datepicker" ng-model="detailsModal.date" id="date" name="date" required />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
